add gocoveralls to circleci

--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,8 @@ machine:
   environment:
     ANDROID_NDK_ROOT: $ANDROID_NDK
     GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
+    GOPATH: $HOME/gopath
+    GOROOT: $HOME/go
 
 ## Customize dependencies
 dependencies:
@@ -10,6 +12,7 @@ dependencies:
     - sudo ln -sf /usr/bin/gcov-4.9 /usr/bin/gcov
     - cd $HOME && wget https://storage.googleapis.com/golang/go1.6.2.linux-amd64.tar.gz && tar xf go1.6.2.linux-amd64.tar.gz
     - gem install coveralls-lcov
+    - go get github.com/mattn/goveralls
 
   override:
     - make
@@ -28,8 +31,8 @@ dependencies:
     - make test
     - make themispp_test
     - make test_all
-    - mkdir -p $HOME/gopath/src/$GOTHEMIS_IMPORT
-    - rsync -auv gothemis/ $HOME/gopath/src/$GOTHEMIS_IMPORT/
+    - mkdir -p $GOPATH/src/$GOTHEMIS_IMPORT
+    - rsync -auv gothemis/ $GOPATH/src/$GOTHEMIS_IMPORT/
     - lcov --directory . --zerocounters
 ## Customize test commands
 test:
@@ -51,7 +54,7 @@ test:
     - build/tests/pythemis_test.sh
     - sudo build/tests/rubythemis_test.sh
     - build/tests/phpthemis_test.sh
-    - export GOROOT=$HOME/go && export GOPATH=$HOME/gopath && $GOROOT/bin/go test -v $GOTHEMIS_IMPORT/...
+    - $GOROOT/bin/go test -v $GOTHEMIS_IMPORT/...
     - build/tests/node.sh
     # - tests/check_ios_test.sh `tests/start_ios_test.sh`
     # start Android emulator
@@ -61,4 +64,6 @@ test:
     - circle-android wait-for-boot
     # run Android tests
     - ./gradlew --info -Pboringssl_path=$HOME/boringssl connectedAndroidTest
+  post:
+    - cd $GOPATH/src/$GOTHEMIS_IMPORT && $GOPATH/bin/goveralls -v -service=circle-ci -repotoken=$COVERALLS_TOKEN
 
