turn off failing build if failed coverage calculating

--- a/circle.yml
+++ b/circle.yml
@@ -42,7 +42,7 @@ test:
   override:
     # run only if CIRCLE_PR_NUMBER variable is not set (it's not pull request and COVERALLS_TOKEN will be set via circleCI for non-PR build) and COVERALLS_TOKEN is set
     # we should calculate coverage for gothemis and send report before sending coverage of main C part
-    - '[ -z "$CIRCLE_PR_NUMBER" ] && ! [ -z "$COVERALLS_TOKEN" ] && cd $HOME/gopath/src/$GOTHEMIS_IMPORT && $HOME/gopath/bin/goveralls -v -service=circle-ci -repotoken=$COVERALLS_TOKEN'
+    - '[ -z "$CIRCLE_PR_NUMBER" ] && ! [ -z "$COVERALLS_TOKEN" ] && cd $HOME/gopath/src/$GOTHEMIS_IMPORT && $HOME/gopath/bin/goveralls -v -service=circle-ci -repotoken=$COVERALLS_TOKEN || true'
     - build/tests/soter_test
     - build/tests/themis_test
     - valgrind build/tests/soter_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {exit sum}'
@@ -52,7 +52,7 @@ test:
     - lcov --directory . --capture --output-file coverage.info
     - lcov --remove coverage.info 'tests/*' 'src/soter/openssl/*' '/usr/*' --output-file coverage.info
     - lcov --list coverage.info
-    - coveralls-lcov -v --repo-token $COVERALLS_TOKEN coverage.info
+    - coveralls-lcov -v --repo-token $COVERALLS_TOKEN coverage.info || true
     - build_with_boringssl/tests/soter_test
     - build_with_boringssl/tests/themis_test
     - build/tests/themispp_test
