--- a/docs/examples/swift/Podfile
+++ b/docs/examples/swift/Podfile
@@ -19,11 +19,11 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 project 'ThemisSwift/ThemisSwift.xcodeproj'
 inhibit_all_warnings!
+use_frameworks!
 
 
 target :"ThemisSwift" do
 
-  # if you feel adventurous, link example to head
   pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => 'release_0.9.5'
 
   #pod 'themis', '0.9.5'
