upd project examples podfiles

--- a/docs/examples/objc/Podfile
+++ b/docs/examples/objc/Podfile
@@ -19,6 +19,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 project 'ThemisTest/ThemisTest.xcodeproj'
 inhibit_all_warnings!
+use_frameworks!
 
 target :"ThemisTest" do
 
