--- a/docs/examples/Themis-server/swift/Podfile
+++ b/docs/examples/Themis-server/swift/Podfile
@@ -19,6 +19,7 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 project 'SwiftThemisServerExample/SwiftThemisServerExample.xcodeproj'
 inhibit_all_warnings!
+use_frameworks!
 
 target :"SwiftThemisServerExample" do
 
