--- a/docs/examples/swift/Podfile
+++ b/docs/examples/swift/Podfile
@@ -21,11 +21,10 @@ project 'ThemisSwift/ThemisSwift.xcodeproj'
 inhibit_all_warnings!
 use_frameworks!
 
-
 target :"ThemisSwift" do
 
-  pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => 'release_0.9.5'
-
+  pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => 'enable_bitcode'
+  
   #pod 'themis', '0.9.5'
 
 end
