--- a/docs/examples/swift/Podfile
+++ b/docs/examples/swift/Podfile
@@ -23,7 +23,7 @@ use_frameworks!
 
 target :"ThemisSwift" do
 
-  pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => 'enable_bitcode'
+  pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => 'release_0.9.5'
   
   #pod 'themis', '0.9.5'
 
