--- a/docs/examples/objc/Podfile
+++ b/docs/examples/objc/Podfile
@@ -19,12 +19,12 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 project 'ThemisTest/ThemisTest.xcodeproj'
 inhibit_all_warnings!
+use_frameworks!
 
 target :"ThemisTest" do
 
-  # if you feel adventurous, link example to head
-  #pod 'themis', :git => "https://github.com/cossacklabs/themis.git"
+  pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => 'release_0.9.5'
 
-  pod 'themis', '0.9.4'
+  #pod 'themis', '0.9.5'
 
 end
