--- a/docs/examples/Themis-server/swift/Podfile
+++ b/docs/examples/Themis-server/swift/Podfile
@@ -23,9 +23,6 @@ use_frameworks!
 
 target :"SwiftThemisServerExample" do
 
-  # if you feel adventurous, link example to head
-  pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => 'release_0.9.5'
-
-  #pod 'themis', '0.9.5'
+  pod 'themis', '0.9.5'
 
 end
