--- a/src/wrappers/themis/jsthemis/package.json
+++ b/src/wrappers/themis/jsthemis/package.json
@@ -1,16 +1,15 @@
 {
   "name": "jsthemis",
-  "version": "0.9.5",
+  "version": "0.9.6-1",
   "description": "Themis is a data security library, providing users with high-quality security services for secure messaging of any kinds and flexible data storage. Themis is aimed at modern developers, with high level OOP wrappers for Ruby, Python, PHP, Java / Android and iOS / OSX. It is designed with ease of use in mind, high security and cross-platform availability.",
   "main": "build/Release/jsthemis.node",
   "scripts": {
-    "preinstall": "node-gyp configure && node-gyp build",
     "preuninstall": "rm -rf build/*"
   },
   "author": {
     "name": "Cossack Labs",
     "email": "dev@cossacklabs.com",
-    "url": "http://cossacklabs.com/"
+    "url": "https://www.cossacklabs.com/"
   },
   "dependencies": {
     "nan": "^2.4.0"
