CMakeLists.txt simple non-productions script to build themis/soter/tests (for ide)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,24 @@
 project(themis)
 cmake_minimum_required(VERSION 3.8)
 include_directories(src)
-add_definitions(-DOPENSSL "-DCRYPTO_ENGINE_PATH=openssl")
+#add_definitions(-DOPENSSL "-DCRYPTO_ENGINE_PATH=openssl")
+
+file(GLOB SOTER_SOURCE_FILES src/soter/*.c src/soter/openssl/*.c src/soter/ed25519/*)
+add_library(soter ${SOTER_SOURCE_FILES})
+add_library(soter_shared SHARED ${SOTER_SOURCE_FILES})
+set_target_properties(soter_shared PROPERTIES OUTPUT_NAME soter)
+
 file(GLOB_RECURSE THEMIS_SOURCE_FILES src/themis/*.c)
-file(GLOB_RECURSE THEMIS_HEADER_FILES src/themis/*.h)
+add_library(themis ${THEMIS_SOURCE_FILES})
+add_library(themis_shared SHARED ${THEMIS_SOURCE_FILES})
+set_target_properties(themis_shared PROPERTIES OUTPUT_NAME themis)
 
-file(GLOB SOTER_SOURCE_FILES src/soter/*.c src/soter/openssl/*.c)
-file(GLOB_RECURSE SOTER_HEADER_FILES src/soter/*.h)
-#link_libraries(openssl)
-add_library(themis SHARED ${THEMIS_SOURCE_FILES})
-
-add_library(soter SHARED ${SOTER_SOURCE_FILES})
-include_directories(/usr/include)
-link_directories(/usr/lib)
-
-
-file(GLOB SOTER_TEST_SOURCE tests/soter/*.c tests/common/*.c tests/common/*.h tests/soter/*.h src/soter/*.c src/soter/openssl/*.c)
+file(GLOB SOTER_TEST_SOURCE tests/soter/*.c tests/common/*.c )
+file(GLOB THEMIS_TEST_SOURCE tests/themis/*.c tests/common/*.c)
 
 add_executable(soter_test ${SOTER_TEST_SOURCE} )
 target_link_libraries(soter_test soter crypto)
+
+add_executable(themis_test ${THEMIS_TEST_SOURCE} ${SOTER_SOURCE_FILES})
+target_include_directories(themis_test PRIVATE tests)
+target_link_libraries(themis_test soter crypto themis)
