run go tests from `test` target; refactor `circle.yml` to use `make test`

--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,6 @@
 machine:
   environment:
     ANDROID_NDK_ROOT: $ANDROID_NDK
-    GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
     GOROOT: $HOME/go
     GOPATH: $HOME/gopath
     PATH: $GOROOT/bin:$PATH
@@ -41,8 +40,8 @@ test:
     # run only if CIRCLE_PR_NUMBER variable is not set (it's not pull request and COVERALLS_TOKEN will be set via circleCI for non-PR build) and COVERALLS_TOKEN is set
     # we should calculate coverage for gothemis and send report before sending coverage of main C part
     - '[ -z "$CIRCLE_PR_NUMBER" ] && ! [ -z "$COVERALLS_TOKEN" ] && cd $HOME/gopath/src/$GOTHEMIS_IMPORT && $HOME/gopath/bin/goveralls -v -service=circle-ci -repotoken=$COVERALLS_TOKEN || true'
-    - build/tests/soter_test
-    - build/tests/themis_test
+    - sudo /sbin/ldconfig
+    - make test
     - valgrind build/tests/soter_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {exit sum}'
     - valgrind build/tests/themis_test 2>&1 | grep "ERROR SUMMARY\|definitely lost\|indirectly lost\|possibly lost" | awk '{sum += $4} END {exit sum}'
     - cover_build/tests/soter_test
@@ -53,13 +52,6 @@ test:
     - coveralls-lcov -v --repo-token $COVERALLS_TOKEN coverage.info || true
     - build_with_boringssl/tests/soter_test
     - build_with_boringssl/tests/themis_test
-    - build/tests/themispp_test
-    - sudo /sbin/ldconfig
-    - build/tests/pythemis_test.sh
-    - sudo build/tests/rubythemis_test.sh
-    - build/tests/phpthemis_test.sh
-    - go test -v $GOTHEMIS_IMPORT/...
-    - build/tests/node.sh
     # - tests/check_ios_test.sh `tests/start_ios_test.sh`
     # start Android emulator
     - emulator -avd circleci-android22 -no-audio -no-window:
