--- a/circle.yml
+++ b/circle.yml
@@ -20,6 +20,7 @@ dependencies:
   pre:
     - sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install php5 cmake libssl-dev python3 python3-setuptools ruby ninja-build lcov build-essential libc6-dbg
     - sudo ln -sf /usr/bin/gcov-4.9 /usr/bin/gcov
+    - if [ ! -d $GOROOT ]; then cd $HOME && wget https://storage.googleapis.com/golang/go1.6.2.linux-amd64.tar.gz && tar xf go1.6.2.linux-amd64.tar.gz; fi
     - gem install coveralls-lcov
     - go get github.com/mattn/goveralls
     # download last valgrind because current version of valgrind on ubuntu (3.10.0) gives false positive errors
