run nist test via cmakelists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(themis)
 cmake_minimum_required(VERSION 3.8)
 include_directories(src)
-#add_definitions(-DOPENSSL "-DCRYPTO_ENGINE_PATH=openssl")
+add_definitions("-DNIST_STS_EXE_PATH=tests/soter/nist-sts")
 
 file(GLOB SOTER_SOURCE_FILES src/soter/*.c src/soter/openssl/*.c src/soter/ed25519/*)
 add_library(soter ${SOTER_SOURCE_FILES})
