Upgrade gradle wrapper and build.gradle to support gradle 4.4.1 and Android gradle plugin 3.0.1

--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 buildscript {
     repositories {
-        mavenCentral()
+        google()
+        jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
