Add BoringSSL as a dependency to the main Android themis build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-import org.apache.tools.ant.taskdefs.condition.Os
+apply plugin: 'com.android.library'
 
 buildscript {
     repositories {
@@ -11,7 +11,9 @@ buildscript {
     }
 }
 
-apply plugin: 'com.android.library'
+dependencies {
+    implementation project(":boringssl")
+}
 
 android {
     compileSdkVersion 27
@@ -34,37 +36,12 @@ android {
 
 	}
 
-    task ndkBuild(type: Exec) {
-	workingDir 'jni'
-        commandLine getNdkBuildCmd() 
-	if (project.hasProperty('boringssl_path')){
-	    args = ["BORINGSSL_PATH=$boringssl_path"]
+    // ensure we execute boringssl tasks first
+    tasks.whenTaskAdded({Task task -> task.dependsOn('boringssl:' + task.name)})
+
+	externalNativeBuild {
+	    ndkBuild {
+	        path "jni/Android.mk"
+	    }
 	}
-    }
-
-    tasks.withType(JavaCompile) {
-        compileTask -> compileTask.dependsOn ndkBuild
-    }
-
-    task cleanNative(type: Exec) {
-		workingDir 'jni'
-        commandLine getNdkBuildCmd(), 'clean'
-    }
-
-    clean.dependsOn cleanNative
-}
-
-def getNdkDir() {
-    if (System.env.ANDROID_NDK != null)
-        return System.env.ANDROID_NDK
-        
-    throw new GradleException("NDK location not found. Define location with an ANDROID_NDK environment variable.")
-}
-
-def getNdkBuildCmd() {
-    def ndkbuild = getNdkDir() + "/ndk-build"
-    if (Os.isFamily(Os.FAMILY_WINDOWS))
-        ndkbuild += ".cmd"
-
-    return ndkbuild
 }
