Split Android test into separate build and test stages
Circle CI fails with out of memory. To reduce memory usage we will compile Themis before starting the emulator. This should also fail the build early if there are any issues with Android build without having to wait for emulator to boot (which takes a while).

--- a/circle.yml
+++ b/circle.yml
@@ -52,6 +52,11 @@ dependencies:
     - mkdir -p $HOME/gopath/src/$GOTHEMIS_IMPORT
     - rsync -auv gothemis/ $HOME/gopath/src/$GOTHEMIS_IMPORT/
     - lcov --directory . --zerocounters
+
+compile:
+  override:
+    - ./gradlew --no-parallel --max-workers=2 build
+ 
 ## Customize test commands
 test:
   override:
